[package]
name = "blockchainpow"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.28", features = ["rand", "serde", "std"] }
rand = "0.8"
once_cell = "1.17"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros"] }
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.1", features = ["derive"] }
uuid = { version = "1.15", features = ["v4"] }


